:sparkles: feat: Add fetch file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <h1>Skillers</h1>
+        <div id="fetch-petition"></div>
     </body>
     <script src="./functions-methods.js"></script>
+    <script src="./fetch.js"></script>
 </html>
