:sparkles: feat: Add examples for asynchronous operations and call stack

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     </body>
     <script src="./functions-methods.js"></script>
     <script src="./fetch.js"></script>
+    <script src="./asynchronism.js"></script>
 </html>
