--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <body>
         <h1>Skillers</h1>
         <div id="fetch-petition"></div>
+        <div id="pokemon"></div>
+        <div id="pokemon-async-await"></div>
+        <div id="pokemon-axios"></div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./functions-methods.js"></script>
     <script src="./fetch.js"></script>
     <script src="./asynchronism.js"></script>
